  * Because of the above, there is no support for rebuffering at 1.1G point (and .tivo files are usually large)
  * Due to all of the above, streaming .tivo files is not really that useful ;-)
 * Fixed audio channels parsing support for ffmpegexe
 * Modified MP4 streaming code to not interleave if initial audio/video chunks are with 4 megabytes of each other.
 * Drop -ac parameter from default for ffmpegexe transcode
 * Moved all assets (icons/images) into asset directory
 * Changed icon theme.  Icons are searched in assets directory
 * Added icon/bkg config options icon.icon=, icon.folder=, icon.movie=  
  * Files are relative to the assets directory
 * Added new config option ignore.dotfiles.  Set to false if you want files/folders with a dot included
 * Added new config option remember.password.  Set to false to not remember password from session to session
 * Added support for testing-- ".raw" files
  * Will stream to tivo without any processing
  * Assumes video/mpeg for mimeType and Content-Type by default
  * if file videofile.raw.fmt exists, the first line is taken as the mime type to use, and the second as the Content-Type
 * Support for EDL file cutlists.  Looks for movie.ext.edl (so movie.mpg.edl for example)
  * TiVo doesn't seem to really like jumping around in MP4's too much.  Not sure how good this will work for MP4
  * MPG seems better, but I still am not sure how accurate the timings are.
  * cut.startoffset, cut.endoffset can be used to adjust the timings in milliseconds.  Defaults are 0
   * startoffset will wait this long after seeing a cut point to jump
   * endoffset will jump this many milliseconds before the cut point says the end should be
 * Changed default port to 7290
 * Added config option streambaby.dir to set up where the streambaby directory is.  Also changed the way native path is initialized.
 * Changed IDLE/timeout code, thanks to wmcbrine