@@ -1,0 +1,5 @@
+package com.unwiredappeal.tivo.streambaby;
+
+public interface IdleHandler {
+	public boolean isIdle();
+}
